--- a/pre-assessment/assets/css/screen.css
+++ b/pre-assessment/assets/css/screen.css
@@ -2,12 +2,15 @@
 	margin: 0px;
 	padding: 0px;
 }
+/*the star means the entire page has zero margin and zero padding/ reset box model */
 body {
 	text-align: center;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	background-color: #171717;
 	font-size: 16px;
 	line-height: 1.5em;
+	background-image: url("../img/bg-tile.jpg");
+	background-repeat: repeat-x;
 }
 #container {
 	max-width: 800px;
@@ -22,6 +25,13 @@ body {
 }
 
 #header h1 a {
+	width:800px;
+	height:140px;
+	display:block;
+	background: url("../img/assessment-1.png");
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
 }
 #nav {
 	background-color: #000;
@@ -70,4 +80,8 @@ body {
 	line-height: 25px;
 	margin-right: 20px;
 	margin-left: 20px;
+}
+
+.alert{
+	background: red;
 }
