--- a/mobile-resume/assets/css/screenmr.css
+++ b/mobile-resume/assets/css/screenmr.css
@@ -38,7 +38,6 @@ html {
   
   body {
     font-family: "Share Tech Mono", monospace;
-    font-weight: 400;
     font-style: normal;
     color: var(--primary-type-color);
     background-color: var(--main-bg-color);
@@ -79,16 +78,17 @@ nav ul li a:hover{
   background-color: var(--primary-type-color)
 }
 
-main {
-  padding: 2px 10px;
+main{
+  padding: 15px;
 }
 
 main h1 {
   display: grid;
   grid-template-columns: 1fr;
-  margin-top:8px ;
+  margin-top:1em;
   text-align: center;
   text-transform: uppercase;
+  margin-bottom: 2em;
 }
 
 main h1:before,
@@ -101,20 +101,109 @@ main h1:after {
 
 dl {
   display: grid;
-  grid-template: repeat(3,auto) / 9em 1fr;
+  grid-template: repeat(4,auto) / .5fr 1fr;
   font-size:.92rem;
-  
-}
+ }
 
 dt {
   font-weight: 800;
   grid-column: 1;
-  padding: 7px 0;
+  padding: 10px 0;
   border-bottom: 2px dotted var(--primary-type-color);
+  text-align: left;
 }
 
 dd{
+  margin:0;
   grid-column:2;
-  padding:7px 0;
+  padding:10px 0;
   border-bottom: 2px dotted var(--primary-type-color);
+  text-align: right;
  }
+
+.related-links a {
+  border: 1px solid var(--primary-type-color);
+  padding: 7.5px 15px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: lowercase;
+  font-size: 0.92em;
+  transition: background-color 1.5s;
+}
+
+.related-links {
+  display: flex;
+  justify-content: space-between;
+  list-style:none;
+  gap: 21px;
+  margin: 30px, 21px, 30px, 0;
+}
+
+.related-links li{
+  margin-left: -40px;
+  margin-right:3px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+ 
+}
+
+.related-links a:hover{
+  background-color: var(--primary-type-color)
+}
+
+#skills li {
+  list-style-type: square;
+}
+
+.job,
+.certificate {
+  border-bottom: 1px solid var(--accent-color-1);
+  padding-bottom: 30px;
+}
+
+.job *[itemprop="jobTitle"],
+.job *[itemprop="name"],
+.job *[itemprop="url"],
+.job *[itemprop="addressLocality"],
+.certificate *[itemprop="name"] {
+  display: block;
+}
+
+.job h3 {
+  margin: 30px 0 0 0;
+}
+
+footer {
+  text-align: center;
+  padding: 30px 0;
+}
+
+.page-title {
+  grid-area: title;
+}
+#about {
+  grid-area: about;
+}
+#skills {
+  grid-area: skills;
+}
+#experience {
+  grid-area: experience;
+}
+#education {
+  grid-area: education;
+}
+
+main.container{
+  display:grid;
+  grid-template-areas:
+    "title"
+    "about"
+    "skills"
+    "education"
+    "experience"
+    ;
+}
+
+  
+
