--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@ html {
     box-sizing: inherit;
   }
 
+.container{
+  max-width: 460px;
+  width:100%;
+  margin: 5px 10px 5px 0px;
+  background: var(--accent-color-1);
+  justify-content: center;
+}
+
 
 
   body{
@@ -21,25 +29,64 @@ html {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='52' height='52' viewBox='0 0 52 52'%3E%3Cpath fill='%23b17457' fill-opacity='0.4' d='M0 17.83V0h17.83a3 3 0 0 1-5.66 2H5.9A5 5 0 0 1 2 5.9v6.27a3 3 0 0 1-2 5.66zm0 18.34a3 3 0 0 1 2 5.66v6.27A5 5 0 0 1 5.9 52h6.27a3 3 0 0 1 5.66 0H0V36.17zM36.17 52a3 3 0 0 1 5.66 0h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 0 1 0-5.66V52H36.17zM0 31.93v-9.78a5 5 0 0 1 3.8.72l4.43-4.43a3 3 0 1 1 1.42 1.41L5.2 24.28a5 5 0 0 1 0 5.52l4.44 4.43a3 3 0 1 1-1.42 1.42L3.8 31.2a5 5 0 0 1-3.8.72zm52-14.1a3 3 0 0 1 0-5.66V5.9A5 5 0 0 1 48.1 2h-6.27a3 3 0 0 1-5.66-2H52v17.83zm0 14.1a4.97 4.97 0 0 1-1.72-.72l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1 0-5.52l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43c.53-.35 1.12-.6 1.72-.72v9.78zM22.15 0h9.78a5 5 0 0 1-.72 3.8l4.44 4.43a3 3 0 1 1-1.42 1.42L29.8 5.2a5 5 0 0 1-5.52 0l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1-.72-3.8zm0 52c.13-.6.37-1.19.72-1.72l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43a5 5 0 0 1 5.52 0l4.43-4.43a3 3 0 1 1 1.42 1.41l-4.44 4.43c.36.53.6 1.12.72 1.72h-9.78zm9.75-24a5 5 0 0 1-3.9 3.9v6.27a3 3 0 1 1-2 0V31.9a5 5 0 0 1-3.9-3.9h-6.27a3 3 0 1 1 0-2h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 1 1 2 0v6.27a5 5 0 0 1 3.9 3.9h6.27a3 3 0 1 1 0 2H31.9z'%3E%3C/path%3E%3C/svg%3E");
   font-family: "Poiret One", sans-serif;
   color: var(--primary-text-color);
-  display:grid;
-  grid-template-columns: repeat(3, 1fr);
-}
+  }
     
  header{
-  grid-column-start: span 6;
+  grid-column-start: span 3;
   justify-content: center;
   background-color: var(--accent-color-1);
+  border-bottom: 4px solid var(--primary-text-color);
   }
+main{
+  padding:15px;
+}
 
-  .primary-nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
+nav{
+  padding: 10px;
+  
+}
+
+nav ul{
+  display:grid;
+  grid-template-columns: 1fr;
+}
+
+nav li{
+  list-style-type: none;
+}
+
+nav a:link, nav a:visited {
+  display: block;
+  padding: 15px 25px;
+  border: 1px solid var(--primary-text-color);
+  text-align: center;
+  text-decoration: none;
+  font-size: .92em;
+  transition: 1.5s;
+  margin-top: 21px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  border-radius: 10% / 50%;
+  
+  
+}
+
+a:link, a:visited {
+  color: var(--primary-text-color);
+}
+
+nav ul li a:hover{
+  background-color: var(--primary-text-color);
+  color: var(--accent-color-1);
+}
 
  .title{
   grid-area:title;
 }
+
+.primary-nav{
+  grid-area: nav;
+}
+
 
 .container{
   display:grid;
@@ -48,10 +95,32 @@ html {
     ;
 }
 
-
- 
+footer{
+  text-align:center;
+  padding: 30px 0;
+}
     
   /*** Media Query ***/
-    @media screen and (max-width:600px){
+    @media screen and (min-width:768px){
+      
+      header.container{
+    max-width:900px;
+        width:100%;
+  }
+      main.container{
+        max-width:900px;
+        font-size: clamp(.92rem, 2.5vw, 1.25rem);
+      }
+      
+      nav ul{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-content: center;
+        gap:65px;
+       
+        
+      }
 
     }
+
