--- a/responsive-resume/assets/css/screenmr.css
+++ b/responsive-resume/assets/css/screenmr.css
@@ -20,6 +20,7 @@ html {
 
 .container {
   max-width: 420px;
+  width:100%;
   margin: 0 auto;
   background: rgba(0,0,0,0.15);
 }
@@ -108,7 +109,7 @@ dl {
 dt {
   font-weight: 800;
   grid-column: 1;
-  padding: 10px 0;
+  padding: 7px 0;
   border-bottom: 2px dotted var(--primary-type-color);
   text-align: left;
 }
@@ -133,10 +134,10 @@ dd{
 
 .related-links {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   list-style:none;
   gap: 21px;
-  margin: 30px, 21px, 30px, 0;
+  margin: 30px, 21px, 30px; 
 }
 
 .related-links li{
@@ -200,10 +201,67 @@ main.container{
     "title"
     "about"
     "skills"
-    "education"
     "experience"
+    "education"
     ;
 }
 
+
+
+@media screen and (min-width:768px){
   
+  body{
+    font-size: clamp(.92rem, 2.5vw, 1.25rem);
+  }
+  
+  header.container{
+    max-width:900px;
+    
+  }
+  
+  main.container{
+    max-width:900px;
+    grid-template-columns: 46% auto;
+    gap:35px;
+    grid-template-areas:
+      "title title"
+      "about about"
+      "experience skills"
+      "education ."
+      ;
+    }
+  dt{
+   font-size: clamp(.92rem, 2.5vw, 1.25rem); 
+  }
+  
+  dl{
+    font-size: clamp(.92rem, 2.5vw, 1.25rem);
+  }
+  
+  #about{
+  display:grid;
+  gap:2em;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "bio details details"
+    "related related related";
+}
+ #skills{
+   margin-left: 1em;
+ 
+  }
+  .bio{
+  grid-area:bio;
+}
+.details{
+  grid-area:details;
+}
+  
+ .related-links{
+  grid-area:related; 
+  border-bottom:1px dotted;
+  padding-bottom:50px
+} 
+  
+}
 
