--- a/final-project/assets/css/styles.css
+++ b/final-project/assets/css/styles.css
@@ -1,7 +1,6 @@
 :root{
     --text-color: #e0dbd1;
     --accent-color-1: #868167;
-  
 }
 html{
   box-sizing: border-box;
@@ -51,9 +50,7 @@ main::before{
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-   
-
-}
+   }
 
 a:visited {
   color: var(--accent-color-1);
@@ -61,4 +58,44 @@ a:visited {
 
 a:link {
   color: var(--text-color);
+}
+
+header{
+  background-color: #CCC;
+}
+
+nav ul {
+display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 5px;
+  padding: 1px 30px 0px 3px;
+  margin: 0 auto;
+}
+
+nav li {
+  list-style-type: none;
+}
+
+nav a:link, nav a:visited {
+  display: block;
+  padding: 5px 7.5px;
+  border: 1px solid var black;
+  text-align: center;
+  text-decoration: none;
+  font-size: .75em;
+  transition: 1.5s;
+  margin-top: 10px;
+  }
+
+  .main{
+  padding: 15px;
+  margin: 0 0 0 15px;;
+}
+
+h1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-top:1em;
+  text-align: center;
+  margin-bottom: 2em;
 }
