--- a/final-project/assets/css/styles.css
+++ b/final-project/assets/css/styles.css
@@ -27,12 +27,14 @@ main::before{
 .container{
   max-width: 420px;
   width:100%;
-  margin: 0 auto;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
+  margin: 7.5 auto;
+  padding: 0 0 0 7.5px;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.3);
   color: var(--text-color);
   width: 100%;
   backdrop-filter: blur(6px);
+  align-items: center;
   
 }
 
@@ -50,15 +52,13 @@ main::before{
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
+    border-bottom: var(--text-color) 1px solid;
    }
 
-a:visited {
+a:visited, a:link {
   color: var(--accent-color-1);
 }
 
-a:link {
-  color: var(--text-color);
-}
 
 header{
   background-color: #CCC;
@@ -67,7 +67,7 @@ header{
 nav ul {
 display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 5px;
+  gap: 2.5px;
   padding: 1px 30px 0px 3px;
   margin: 0 auto;
 }
@@ -76,15 +76,22 @@ nav li {
   list-style-type: none;
 }
 
+nav ul li a:hover{
+  background-color: var(--accent-color-1);
+  color: var(--text-color);
+}
+
 nav a:link, nav a:visited {
   display: block;
   padding: 5px 7.5px;
-  border: 1px solid var black;
+  border: 1px solid black;
   text-align: center;
   text-decoration: none;
-  font-size: .75em;
+  font-size: .7em;
   transition: 1.5s;
   margin-top: 10px;
+  margin-left: 4px;
+  align-items: center;
   }
 
   .main{
@@ -92,10 +99,65 @@ nav a:link, nav a:visited {
   margin: 0 0 0 15px;;
 }
 
-h1 {
+h1, h4 {
   display: grid;
   grid-template-columns: 1fr;
   margin-top:1em;
   text-align: center;
   margin-bottom: 2em;
+}
+
+#primary h1:before,
+#primary h1:after {
+  background-color: var(--accent-color-1);
+  content: "\a0";
+  height: 3px;
+  position: relative;
+  margin-bottom: 7.5px;
+}
+
+h4{
+  padding-bottom: 3em;
+}
+
+
+footer{
+  background-color: #CCC;
+  padding: 3px;
+  text-align: center;
+  margin-top: 2em;
+  align-items: center;
+  font-size: 0.8em;
+}
+
+@media screen and (min-width:768px){
+  
+  body{
+    font-size: clamp(.92rem, 2.5vw, 1.25rem);
+  }
+  
+  header.container{
+    max-width:900px;
+    
+  }
+
+  .container{
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 0 0 7.5px;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0, 0.3);
+    color: var(--text-color);
+    width: 100%;
+    backdrop-filter: blur(6px);
+    align-items: center;
+  }
+
+  footer{
+    max-width: 900px;
+    display: flex;
+    justify-content: space-evenly;
+   
+  }
+    
 }
