--- a/final-project/assets/css/styles.css
+++ b/final-project/assets/css/styles.css
@@ -145,11 +145,6 @@ footer{
     max-width: 900px;
     margin: 0 auto;
     padding: 0 0 0 7.5px;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.3);
-    color: var(--text-color);
-    width: 100%;
-    backdrop-filter: blur(6px);
     align-items: center;
   }
 
@@ -160,4 +155,14 @@ footer{
    
   }
     
+}
+@media screen and (min-width:992px){
+
+  header{
+    max-width:1200px;
+    width:100%;
+    
+  }
+  .container{
+    max-width:1200px;
 }
