--- a/final-project/assets/css/styles.css
+++ b/final-project/assets/css/styles.css
@@ -12,7 +12,7 @@ html{
 body{
     font-family: "Cormorant Garamond", serif;
      font-optical-sizing: auto;
-     font-weight: 700;
+     font-weight: 600;
      font-style: normal;
     background-image: url('../img/bg.jpg');
     background-size: cover 100%;
@@ -94,7 +94,7 @@ nav a:link, nav a:visited {
   align-items: center;
   }
 
-  .main{
+  main.container{
   padding: 15px;
   margin: 0 0 0 15px;;
 }
@@ -136,15 +136,15 @@ footer{
     font-size: clamp(.92rem, 2.5vw, 1.25rem);
   }
   
-  header.container{
+  header{
     max-width:900px;
     
   }
 
   .container{
     max-width: 900px;
+    width:100%;
     margin: 0 auto;
-    padding: 0 0 0 7.5px;
     align-items: center;
   }
 
@@ -163,6 +163,10 @@ footer{
     width:100%;
     
   }
+
+  
   .container{
     max-width:1200px;
+    width:100%;
+  }
 }
