one hundred and thirty two

--- a/final-project/assets/css/styles.css
+++ b/final-project/assets/css/styles.css
@@ -168,5 +168,13 @@ footer{
   .container{
     max-width:1200px;
     width:100%;
+    align-items: center;
+  }
+
+  footer{
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-evenly;
+   
   }
 }
